# adventofcode2022

day1/: CMakeLists.txt
day1/include/: mp11_embed.hpp
day1/resources/: genmp11.py
day1/source/: main.cpp
day2/: CMakeLists.txt
day2/include/: engine.hpp  io.hpp
day2/resources/: input.mhtml
day2/src/: main.cpp
day3/: CMakeLists.txt
day3/source/: main.cpp
day4/: CMakeLists.txt
day4/source/: main.cpp
day5/: CMakeLists.txt
day5/include/: crates.hpp
day5/source/: crates.cpp  main.cpp  test.cpp
